gen/ScalorParser.py
# Generated from /home/kostiantyn/PycharmProjects/Scalor/antlr/Scalor.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ScalorParser ( Parser ):

    grammarFileName = "Scalor.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'var'", "':'", "'='", "'val'", 
                     "'Int'", "'Float'", "'Boolean'", "'String'", "'if'", 
                     "'('", "')'", "'else'", "'while'", "'print'", "'input'", 
                     "'true'", "'false'", "'+'", "'-'", "'^'", "'*'", "'/'", 
                     "'{'", "'}'", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IDENT", "INT_NUMB", "FLOAT_NUMB", "BOOL_CONST", "STRING_CONST", 
                      "LETTER", "DIGIT", "SYMBOL", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_declSection = 1
    RULE_declarList = 2
    RULE_declaration = 3
    RULE_varDecl = 4
    RULE_valDecl = 5
    RULE_type = 6
    RULE_doSection = 7
    RULE_statementList = 8
    RULE_statement = 9
    RULE_assign = 10
    RULE_ifStatement = 11
    RULE_whileStatement = 12
    RULE_printStatement = 13
    RULE_inputStatement = 14
    RULE_expression = 15
    RULE_boolExpr = 16
    RULE_arithmExpression = 17
    RULE_power = 18
    RULE_term = 19
    RULE_factor = 20
    RULE_concatExpression = 21
    RULE_doBlock = 22
    RULE_constant = 23
    RULE_relOp = 24

    ruleNames =  [ "program", "declSection", "declarList", "declaration", 
                   "varDecl", "valDecl", "type", "doSection", "statementList", 
                   "statement", "assign", "ifStatement", "whileStatement", 
                   "printStatement", "inputStatement", "expression", "boolExpr", 
                   "arithmExpression", "power", "term", "factor", "concatExpression", 
                   "doBlock", "constant", "relOp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    IDENT=32
    INT_NUMB=33
    FLOAT_NUMB=34
    BOOL_CONST=35
    STRING_CONST=36
    LETTER=37
    DIGIT=38
    SYMBOL=39
    WS=40
    COMMENT=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declSection(self):
            return self.getTypedRuleContext(ScalorParser.DeclSectionContext,0)


        def doSection(self):
            return self.getTypedRuleContext(ScalorParser.DoSectionContext,0)


        def EOF(self):
            return self.getToken(ScalorParser.EOF, 0)

        def getRuleIndex(self):
            return ScalorParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ScalorParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.declSection()
            self.state = 51
            self.doSection()
            self.state = 52
            self.match(ScalorParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarList(self):
            return self.getTypedRuleContext(ScalorParser.DeclarListContext,0)


        def getRuleIndex(self):
            return ScalorParser.RULE_declSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclSection" ):
                listener.enterDeclSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclSection" ):
                listener.exitDeclSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclSection" ):
                return visitor.visitDeclSection(self)
            else:
                return visitor.visitChildren(self)




    def declSection(self):

        localctx = ScalorParser.DeclSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.declarList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScalorParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(ScalorParser.DeclarationContext,i)


        def getRuleIndex(self):
            return ScalorParser.RULE_declarList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarList" ):
                listener.enterDeclarList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarList" ):
                listener.exitDeclarList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarList" ):
                return visitor.visitDeclarList(self)
            else:
                return visitor.visitChildren(self)




    def declarList(self):

        localctx = ScalorParser.DeclarListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declarList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.declaration()
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 57
                self.match(ScalorParser.T__0)
                self.state = 58
                self.declaration()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(ScalorParser.VarDeclContext,0)


        def valDecl(self):
            return self.getTypedRuleContext(ScalorParser.ValDeclContext,0)


        def getRuleIndex(self):
            return ScalorParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = ScalorParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration)
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.varDecl()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.valDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(ScalorParser.IDENT, 0)

        def type_(self):
            return self.getTypedRuleContext(ScalorParser.TypeContext,0)


        def expression(self):
            return self.getTypedRuleContext(ScalorParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ScalorParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = ScalorParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(ScalorParser.T__1)
            self.state = 69
            self.match(ScalorParser.IDENT)
            self.state = 70
            self.match(ScalorParser.T__2)
            self.state = 71
            self.type_()
            self.state = 72
            self.match(ScalorParser.T__3)
            self.state = 73
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(ScalorParser.IDENT, 0)

        def type_(self):
            return self.getTypedRuleContext(ScalorParser.TypeContext,0)


        def expression(self):
            return self.getTypedRuleContext(ScalorParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ScalorParser.RULE_valDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValDecl" ):
                listener.enterValDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValDecl" ):
                listener.exitValDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValDecl" ):
                return visitor.visitValDecl(self)
            else:
                return visitor.visitChildren(self)




    def valDecl(self):

        localctx = ScalorParser.ValDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_valDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(ScalorParser.T__4)
            self.state = 76
            self.match(ScalorParser.IDENT)
            self.state = 77
            self.match(ScalorParser.T__2)
            self.state = 78
            self.type_()
            self.state = 79
            self.match(ScalorParser.T__3)
            self.state = 80
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ScalorParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = ScalorParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 960) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(ScalorParser.StatementListContext,0)


        def getRuleIndex(self):
            return ScalorParser.RULE_doSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoSection" ):
                listener.enterDoSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoSection" ):
                listener.exitDoSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoSection" ):
                return visitor.visitDoSection(self)
            else:
                return visitor.visitChildren(self)




    def doSection(self):

        localctx = ScalorParser.DoSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_doSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.statementList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScalorParser.StatementContext)
            else:
                return self.getTypedRuleContext(ScalorParser.StatementContext,i)


        def getRuleIndex(self):
            return ScalorParser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementList" ):
                return visitor.visitStatementList(self)
            else:
                return visitor.visitChildren(self)




    def statementList(self):

        localctx = ScalorParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 86
                self.statement()
                self.state = 89 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4295083008) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(ScalorParser.AssignContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(ScalorParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(ScalorParser.WhileStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(ScalorParser.PrintStatementContext,0)


        def inputStatement(self):
            return self.getTypedRuleContext(ScalorParser.InputStatementContext,0)


        def getRuleIndex(self):
            return ScalorParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ScalorParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.assign()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.ifStatement()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.whileStatement()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 4)
                self.state = 94
                self.printStatement()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 5)
                self.state = 95
                self.inputStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(ScalorParser.IDENT, 0)

        def expression(self):
            return self.getTypedRuleContext(ScalorParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ScalorParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = ScalorParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(ScalorParser.IDENT)
            self.state = 99
            self.match(ScalorParser.T__3)
            self.state = 100
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ScalorParser.ExpressionContext,0)


        def doBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScalorParser.DoBlockContext)
            else:
                return self.getTypedRuleContext(ScalorParser.DoBlockContext,i)


        def getRuleIndex(self):
            return ScalorParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = ScalorParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(ScalorParser.T__9)
            self.state = 103
            self.match(ScalorParser.T__10)
            self.state = 104
            self.expression()
            self.state = 105
            self.match(ScalorParser.T__11)
            self.state = 106
            self.doBlock()
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 107
                self.match(ScalorParser.T__12)
                self.state = 108
                self.doBlock()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ScalorParser.ExpressionContext,0)


        def doBlock(self):
            return self.getTypedRuleContext(ScalorParser.DoBlockContext,0)


        def getRuleIndex(self):
            return ScalorParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = ScalorParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(ScalorParser.T__13)
            self.state = 112
            self.match(ScalorParser.T__10)
            self.state = 113
            self.expression()
            self.state = 114
            self.match(ScalorParser.T__11)
            self.state = 115
            self.doBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ScalorParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ScalorParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStatement" ):
                return visitor.visitPrintStatement(self)
            else:
                return visitor.visitChildren(self)




    def printStatement(self):

        localctx = ScalorParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(ScalorParser.T__14)
            self.state = 118
            self.match(ScalorParser.T__10)
            self.state = 119
            self.expression()
            self.state = 120
            self.match(ScalorParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(ScalorParser.IDENT, 0)

        def getRuleIndex(self):
            return ScalorParser.RULE_inputStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputStatement" ):
                listener.enterInputStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputStatement" ):
                listener.exitInputStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputStatement" ):
                return visitor.visitInputStatement(self)
            else:
                return visitor.visitChildren(self)




    def inputStatement(self):

        localctx = ScalorParser.InputStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_inputStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(ScalorParser.T__15)
            self.state = 123
            self.match(ScalorParser.T__10)
            self.state = 124
            self.match(ScalorParser.IDENT)
            self.state = 125
            self.match(ScalorParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmExpression(self):
            return self.getTypedRuleContext(ScalorParser.ArithmExpressionContext,0)


        def boolExpr(self):
            return self.getTypedRuleContext(ScalorParser.BoolExprContext,0)


        def concatExpression(self):
            return self.getTypedRuleContext(ScalorParser.ConcatExpressionContext,0)


        def getRuleIndex(self):
            return ScalorParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = ScalorParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_expression)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.arithmExpression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.boolExpr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.concatExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ScalorParser.ArithmExpressionContext)
            else:
                return self.getTypedRuleContext(ScalorParser.ArithmExpressionContext,i)


        def relOp(self):
            return self.getTypedRuleContext(ScalorParser.RelOpContext,0)


        def boolExpr(self):
            return self.getTypedRuleContext(ScalorParser.BoolExprContext,0)


        def getRuleIndex(self):
            return ScalorParser.RULE_boolExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolExpr" ):
                listener.enterBoolExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolExpr" ):
                listener.exitBoolExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolExpr" ):
                return visitor.visitBoolExpr(self)
            else:
                return visitor.visitChildren(self)




    def boolExpr(self):

        localctx = ScalorParser.BoolExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_boolExpr)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.arithmExpression()
                self.state = 133
                self.relOp()
                self.state = 134
                self.arithmExpression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(ScalorParser.T__16)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 137
                self.match(ScalorParser.T__17)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 138
                self.match(ScalorParser.T__10)
                self.state = 139
                self.boolExpr()
                self.state = 140
                self.match(ScalorParser.T__11)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmExpressionContext(ParserRuleContext):
        __slots__ = 'parser'
